--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font: 300% "Century Gothic", Futura, sans-serif;
+    margin: 20px;
+    --bg-color: #181c28;
+    --bg-secondary-color: #131316;
+    --font-color: #f5f5f5;
+    --color-grey: #ccc;
+    --color-darkGrey: #777;
+    text-align: center;
+  }
+
+.runButton {
+    height: 15%;
+    width: 60%;
+    font-size: 80%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.outputText {
+    font-size: 80%;
+}
+
+.infoText {
+    font-size: 50%;
+}
+
+.outputBox {
+    max-width: 90%;
 }
